<resources>
    <string name="app_name">SmartFarmTool</string>
    <string name="string1">Where would you like to go?</string>
    <string name="farmersection">Farmer Section</string>
    <string name="sell_buy">Selling/Buying</string>
    <string name="app_name1">Smart Farm Tool</string>
    <string name="login">Log In</string>
    <string name="signup">Next</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="orloginwith">Or Login with</string>
    <string name="signin">Sign In</string>
    <string name="hintmobno">Enter the Mobile No..</string>
    <string name="hintpass">Password</string>
    <string name="forgotpass">Forgot Password / Login with OTP</string>
    <string name="newhere">If you are new,please</string>
    <string name="name">Name</string>
    <string name="village">Village</string>
    <string name="Dist">District</string>
    <string name="state">State</string>
    <string name="registration">Complete Registration</string>
    <string name="smart_farm_tool">Smart Farm Tool</string>
    <string name="skip">Skip</string>
    <string name="login_or_register">Login or Register</string>
    <string name="phone_number">PHONE NUMBER</string>
    <string name="enter_your_mobile_number">Enter your mobile number</string>
    <string name="continue_btn">Continue</string>
    <string name="enter_the_otp">Enter OTP</string>
    <string name="title_activity_navigation_dmenu">NavigationDMenu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Smart Farm Tool</string>
    <string name="nav_header_subtitle">smartfarmtool@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_selling">SellingActivity</string>
    <string name="action_city">Change City</string>
    <string-array name="crops_name">
        <item>Wheat</item>
        <item>Rice</item>
        <item>Jowar</item>
        <item>Maize</item>
        <item>Sorghum</item>
        <item>Peas</item>
        <item>Lentil</item>
        <item>Rye</item>
        <item>Mustard</item>
        <item>Turmeric</item>
        <item>Soyabeans</item>
        <item>Garlic</item>
        <item>Sunflower Seed</item>
        <item>Ginger</item>

    </string-array>


    <string-array name="city_name">

        <item>Kochi,IN</item>
        <item>Thiruvananthapuram,IN</item>
        <item>Kasaragod,IN</item>
        <item>Pathanamthitta,IN</item>
        <item>Idukki,IN</item>
        <item>Malappuram,IN</item>
        <item>Kozhikode,IN</item>
        <item>Ernakulam,IN</item>
        <item>Aluva,IN</item>
        <item>Kollam,IN</item>
        <item>Kannur,IN</item>
        <item>Thrissur,IN</item>
        <item>Kottayam,IN</item>
        <item>Munnar,IN</item>
        <item>Patna,IN</item>
        <item>Gopalganj,IN</item>
        <item>Katihar,IN</item>
        <item>Purnia,IN</item>
        <item>Noida,IN</item>
        <item>Bhagalpur,IN</item>
        <item>Delhi,IN</item>
        <item>Mumbai,IN</item>
        <item>Chennai,IN</item>
        <item>Kolkata,IN</item>
        <item>Bengaluru,IN</item>
        <item>Bihpur,IN</item>
        <item>Dhamdaha,IN</item>
        <item>Naugachia,IN</item>


    </string-array>
</resources>
