<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".loginactivity"
    android:background="@color/white"
    >

    <LinearLayout
        android:id="@+id/elll1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        android:orientation="vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"

        >


        <android.support.design.widget.TextInputLayout
            android:id="@+id/altil1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_weight="45"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"



            >

            <EditText

                android:id="@+id/username_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimary"
                android:hint="@string/hintmobno"
                android:inputType="phone"
                android:maxLength="10"

                android:maxLines="1"

                android:textAllCaps="false"
                 />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/altil2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="15dp"
            android:layout_weight="45"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

            >

            <EditText
                android:id="@+id/password_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimary"
                android:hint="@string/hintpass"
                android:inputType="numberPassword"
                android:maxLines="1"
                android:textAllCaps="false"

                />
        </android.support.design.widget.TextInputLayout>



        <Button
            android:id="@+id/login_id"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="40"
            android:text="@string/signin"
            android:layout_marginTop="30dp"
            android:background="@drawable/buttoncolor1"
            android:textColor="@drawable/textcolor1"
            android:textAllCaps="false"


            />

        <TextView
            android:id="@+id/altv1"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="15"
            android:text="@string/forgotpass"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:textColor="@color/colorPrimary"

            />

        <LinearLayout

            android:id="@+id/alll2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="15"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            android:layout_gravity="center"

            >

            <TextView
                android:id="@+id/altv2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="75"
                android:text="@string/newhere"
                android:textColor="@color/gray"
                android:gravity="right"


                />

            <TextView
                android:id="@+id/altv3"
                android:paddingLeft="3dp"
                android:gravity="left"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:text="@string/signup"
                android:textColor="@color/colorPrimary"


                />


        </LinearLayout>

    </LinearLayout>

    <include layout="@layout/additional_login"

        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/elll1"


        />


</android.support.constraint.ConstraintLayout>