<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signupactivity">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/astil1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"

        >

        <EditText
            android:id="@+id/aset1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/name"
            android:backgroundTint="@color/colorPrimary"
            android:inputType="textCapWords"


            />


    </android.support.design.widget.TextInputLayout>



    <android.support.design.widget.TextInputLayout
        android:id="@+id/astil2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/astil1"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"


        >

        <EditText
            android:id="@+id/aset2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/hintmobno"
            android:backgroundTint="@color/colorPrimary"
            android:inputType="phone"
            android:maxLength="10"
            android:maxLines="1"


            />


    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/astil3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/astil2"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"


        >

        <EditText
            android:id="@+id/aset3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/village"
            android:backgroundTint="@color/colorPrimary"
            android:inputType="textCapWords"


            />


    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/astil4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
       app:layout_constraintTop_toBottomOf="@id/astil3"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"



        >

        <EditText
            android:id="@+id/aset4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/Dist"
            android:backgroundTint="@color/colorPrimary"
            android:inputType="textCapWords"


            />


    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/astil5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/astil4"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"


        >

        <EditText
            android:id="@+id/aset5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/state"
            android:backgroundTint="@color/colorPrimary"
            android:inputType="textCapWords"


            />


    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/astil6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/astil5"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"


        >

        <EditText
            android:id="@+id/aset6"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/hintpass"
            android:backgroundTint="@color/colorPrimary"
            android:inputType="numberPassword"


            />


    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/asb1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/astil6"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/signup"
        android:textAllCaps="false"
        android:background="@drawable/buttoncolor1"
        android:textColor="@drawable/textcolor1"

        />




</android.support.constraint.ConstraintLayout>