<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login_Signup"
    android:background="@color/white"
    >

    <TextView android:id="@+id/home_title_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textSize="30sp"
        android:textColor="@color/colorPrimary"
        android:text="@string/app_name1"/>

    <LinearLayout
        android:id="@+id/home_layout_id"
        app:layout_constraintTop_toBottomOf="@id/home_title_id"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="60dp"

        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/home_login_id"

            android:text="@string/login"
            android:background="@drawable/buttoncolor1"
            android:textColor="@drawable/textcolor1"
            android:textAllCaps="false"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="30"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp"
            />

        <Button
            android:id="@+id/home_sign_up_id"
            android:background="@drawable/buttoncolor1"
            android:textColor="@drawable/textcolor1"
            android:text="@string/signup"
            android:textAllCaps="false"
            android:layout_width="0dp"
            android:layout_weight="30"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            />

    </LinearLayout>

    <include layout="@layout/additional_login"

        android:layout_marginTop="32dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/home_layout_id"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />





</android.support.constraint.ConstraintLayout>