<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login.PhoneActivity"
   >

    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/profile_image"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:src="@drawable/farmtool"
        app:civ_border_width="2dp"
        app:civ_border_color="#FF000000"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        />
    <RelativeLayout
        android:id="@+id/phone_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/profile_image"
        android:layout_margin="12dp"
        >

        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            >

            <EditText
                android:id="@+id/enter_phone_id"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/hintmobno"
                android:backgroundTint="@color/colorPrimary"
                android:inputType="phone"
                android:maxLength="10"
                android:letterSpacing="0.40"
                android:textStyle="bold|italic"
                android:maxLines="1"
                android:textSize="20dp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:textColorHighlight="@color/colorPrimaryDark"
                android:textColor="@color/colorAccent"
                android:textColorHint="@color/colorPrimaryDark"
                android:textAlignment="center"
                />


        </android.support.design.widget.TextInputLayout>
        <Button
            android:id="@+id/phone_next_btn_id"
            android:layout_below="@id/inputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/button_new"
            android:text="@string/signup"
            android:alpha="0.7"
            android:fontFamily="serif-monospace"
            android:textStyle="bold"
            android:textSize="20dp"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent" />

    </RelativeLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_image"
        android:layout_margin="12dp"

        >
        <ProgressBar
            android:id="@+id/progress_id"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:visibility="gone"
            />
        <LinearLayout
            android:id="@+id/otp_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="invisible"

            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:alpha="0.7"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="center_horizontal|bottom"
                    android:text="@string/registration"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20dp"
                    android:textStyle="bold"

                    />
            </LinearLayout>





            <android.support.design.widget.TextInputLayout
                android:id="@+id/astil2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

                >

                <EditText
                    android:id="@+id/otp_id"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/enter_the_otp"
                    android:backgroundTint="@color/colorPrimary"
                    android:inputType="phone"
                    android:maxLength="10"
                    android:maxLines="1"
                    android:letterSpacing="1"
                    android:textStyle="bold|italic"
                    android:textAlignment="center"
                    android:textSize="20dp"
                    android:textColor="@color/colorAccent"
                    android:textColorHighlight="@color/colorPrimaryDark"
                    />


            </android.support.design.widget.TextInputLayout>


            <Button
                android:id="@+id/otp_continue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/button_new"
                android:text="@string/continue_btn"
                android:textAllCaps="false"
                android:fontFamily="serif-monospace"
                android:textSize="20dp"
                android:textStyle="bold"
                android:alpha="0.6"
                android:textColor="@color/colorAccent" />

        </LinearLayout>


    </FrameLayout>
</RelativeLayout>